force-app/main/default/objects/DC_Field__mdt/DC_Field__mdt.object-meta.xml
<CustomObject>
    <label>DC_Field</label>
    <pluralLabel>DC_Fields</pluralLabel>
</CustomObject>