force-app/main/default/objects/DC_Field__mdt/fields/DC_Section__c.field-meta.xml
<CustomField>
    <fullName>DC_Section__c</fullName>
    <label>DC_Section</label>
    <referenceTo>DC_Section__mdt</referenceTo>
    <relationshipLabel>DC_Fields</relationshipLabel>
    <relationshipName>DC_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>