force-app/main/default/objects/DC_Field__mdt/fields/Is_Hidden_When_Empty__c.field-meta.xml
<CustomField>
    <fullName>Is_Hidden_When_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden When Empty</label>
    <type>Checkbox</type>
</CustomField>