force-app/main/default/objects/DC_Field__mdt/fields/toLabel__c.field-meta.xml
<CustomField>
    <fullName>toLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>toLabel</label>
    <type>Checkbox</type>
</CustomField>