force-app/main/default/objects/DC_Field__mdt/fields/Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Wrapper__c</fullName>
    <label>Wrapper</label>
    <referenceTo>DC_Wrapper__mdt</referenceTo>
    <relationshipName>dc_fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>